-
Bug
-
Resolution: Done
-
P1: Critical
-
5.8.0 RC
-
None
-
b1e9db69064fb7b30cdc3d9321c81684b2f56090 d0ba7b41f27fbfac366930a5e92b80e530b39630
This is a regression from 5.8.0 beta. Running the controls 2 gallery example causes crash on startup with the error:
W Gallery : (null):0 ((null)): QQmlApplicationEngine failed to load component
W Gallery : (null):0 ((null)): qrc:/gallery.qml:224 Type Dialog unavailable
W Gallery : file:///data/user/0/org.qtproject.example.gallery/qt-reserved-files/qml/QtQuick/Controls.2/Dialog.qml:76 Type DialogButtonBox unavailable
W Gallery : file:///data/user/0/org.qtproject.example.gallery/qt-reserved-files/qml/QtQuick/Controls.2/qmldir:-1 plugin cannot be loaded for module ".data.user.0.org.qtproject.example.gallery.qt-reserved-files.qml.QtQuick.Controls": Module namespace 'QtQuick.Controls' does not match import URI '.data.user.0.org.qtproject.example.gallery.qt-reserved-files.qml.QtQuick.Controls'
Confirmed on Android 7 (Nexus 9 and Pixel C) and Android 6 (Galaxy S7)
The example works on Android 4.4.4 (Nexus 10)
- relates to
-
QTBUG-64868 QQC2 apps do not run on Android
-
- Closed
-
- resulted in
-
QTBUG-59026 Qt Quick Materials Controls crash on Android
-
- Closed
-