src/quickcontrols2/qquickstyle_p.h
@@ -60,6 +60,7 @@ public:
     static bool isCustomStyle();
     static void init(const QUrl &baseUrl);
     static void reset();
+    static QString configFilePath();
 };
 
 QT_END_NAMESPACE
